Fix package structure